--- a/src/main/java/com/mycompany/proyecto_integrador1/Sistema/CandidateForm.form
+++ b/src/main/java/com/mycompany/proyecto_integrador1/Sistema/CandidateForm.form
@@ -135,6 +135,7 @@
         <Property name="text" type="java.lang.String" value="Registrar"/>
       </Properties>
       <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnRegistrarMouseClicked"/>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRegistrarActionPerformed"/>
       </Events>
     </Component>
